# fakeit

./: Cargo.toml  README.md
src/: address.rs  colour.rs  company.rs  contact.rs  currency.rs  data.rs  datetime.rs  global.rs  hacker.rs  image.rs  impls.rs  internet.rs  job.rs  lib.rs  macros.rs  name.rs  password.rs  payment.rs  person.rs  status_code.rs  unreal.rs  user_agent.rs  uuid.rs  words.rs
src/data/: address.rs  animal.rs  beer.rs  color.rs  company.rs  computer.rs  currency.rs  datetime.rs  files.rs  hacker.rs  hipster.rs  internet.rs  job.rs  language.rs  log_level.rs  lorem.rs  payment.rs  person.rs  status_code.rs  vehicle.rs
src/impls/: address.rs  animal.rs  beer.rs  bool_rand.rs  colour.rs  company.rs  contact.rs  currency.rs  datetime.rs  file.rs  hacker.rs  hipster.rs  image.rs  internet.rs  job.rs  language.rs  log_level.rs  name.rs  number.rs  password.rs  payment.rs  person.rs  status_code.rs  string.rs  user_agent.rs  uuid.rs  vehicle.rs  words.rs
tests/: global.rs  some.rs
