[package]
name = "unreal"
version = "1.2.0"
authors = [
    "PumpkinSeed <qwer.kocka@gmail.com>",
    "Matthew Li <matthew.li10@education.nsw.gov.au>",
]
edition = "2024"
description = "Fake data generator; fork of the fakeit crate"
license = "MIT"
readme = "README.md"
keywords = ["fake", "data", "random", "generator", "faker"]

[dependencies]
rand = "0.8.5"
uuid = { version = "1.11.0", features = ["v1", "v4"] }
itertools = "0.13.0"
chrono = "0.4.39"
macro-vis = "0.1.1"
